added border and removed background pedal preview

--- a/create.html
+++ b/create.html
@@ -34,8 +34,8 @@
   width: 35%;          /* fixed width */
   overflow: auto;
   padding: 15px;
+  border: solid 1px #fff;
   border-radius: 8px;
-  background: #fff;    /* optional for clarity */
   z-index: 10;
 }
 
