--- a/create.html
+++ b/create.html
@@ -105,35 +105,34 @@
                 <label id="inside-color-label">Inside Color<input type="color" id="pedal-inside-color" value="#0d0d0d"></label>
                 <label id="inside-image-label" style="display:none">Image URL<input type="text" id="pedal-inside-image" placeholder="https://example.com/image.png"></label>
                 <label id="pedal-inside-full-check-label"><input type="checkbox" id="pedal-inside-full-check"> Full</label>
-
-                
+                <!-- <label id="inside-border-label" style="display:none;"> Inside Border <input type="checkbox" id="pedal-inside-border-check"><input type="color" id="pedal-inside-border" value="#000000"></label> -->
                 <label id="inside-border-label" style="display:none;"> Inside Border <input type="checkbox" id="pedal-inside-border-check"><input type="color" id="pedal-inside-border" value="#000000"></label>
                 <br><br>
                 <label>Knobs Color <input type="color" id="knobs-color" value="#191919"></label>&ensp;&ensp;
                 <label>Knobs Border <input type="color" id="knobs-border" value="#424242"></label>&ensp;&ensp;
                 <label>Knobs Indicator <input type="color" id="knobs-indicator" value="#ffffff"></label>&ensp;&ensp;
                 <script>
-                $("#pedal-inside-full-check").on("change", function () {
-                    const isImage = $("#inside-type-select").val() === "image";
-                    $("#inside-border-label").toggle(this.checked || isImage);
-                });
+                // $("#pedal-inside-full-check").on("change", function () {
+                //     const isImage = $("#inside-type-select").val() === "image";
+                //     $("#inside-border-label").toggle(this.checked || isImage);
+                // });
 
-                // Also update border visibility when inside type changes
-                $("#inside-type-select").on("change", function () {
-                    const isImage = $(this).val() === "image";
-                    const isFull = $("#pedal-inside-full-check").is(":checked");
-                    $("#inside-border-label").toggle(isFull || isImage);
+                // // Also update border visibility when inside type changes
+                // $("#inside-type-select").on("change", function () {
+                //     const isImage = $(this).val() === "image";
+                //     const isFull = $("#pedal-inside-full-check").is(":checked");
+                //     $("#inside-border-label").toggle(isFull || isImage);
 
-                    if ($(this).val() === "color") {
-                        $("#inside-color-label").show();
-                        $("#inside-image-label").hide();
-                        $("#pedal-inside-full-check-label").show();
-                    } else {
-                        $("#inside-color-label").hide();
-                        $("#inside-image-label").show();
-                        $("#pedal-inside-full-check-label").hide();
-                    }
-                });
+                //     if ($(this).val() === "color") {
+                //         $("#inside-color-label").show();
+                //         $("#inside-image-label").hide();
+                //         $("#pedal-inside-full-check-label").show();
+                //     } else {
+                //         $("#inside-color-label").hide();
+                //         $("#inside-image-label").show();
+                //         $("#pedal-inside-full-check-label").hide();
+                //     }
+                // });
                 </script>
 
                 <br><br>
