added spaces between input colors

--- a/create.html
+++ b/create.html
@@ -102,10 +102,9 @@
                 </select>
                 </label>&ensp;&ensp;
                 
-                <label id="inside-color-label">Inside Color<input type="color" id="pedal-inside-color" value="#0d0d0d"></label>
-                <label id="inside-image-label" style="display:none">Image URL<input type="text" id="pedal-inside-image" placeholder="https://example.com/image.png"></label>
-                <label id="pedal-inside-full-check-label"><input type="checkbox" id="pedal-inside-full-check"> Full</label>
-                <!-- <label id="inside-border-label" style="display:none;"> Inside Border <input type="checkbox" id="pedal-inside-border-check"><input type="color" id="pedal-inside-border" value="#000000"></label> -->
+                <label id="inside-color-label">Inside Color<input type="color" id="pedal-inside-color" value="#0d0d0d"></label>&ensp;&ensp;
+                <label id="inside-image-label" style="display:none">Image URL<input type="text" id="pedal-inside-image" placeholder="https://example.com/image.png"></label>&ensp;&ensp;
+                <label id="pedal-inside-full-check-label"><input type="checkbox" id="pedal-inside-full-check"> Full</label>&ensp;&ensp;
                 <label id="inside-border-label"> Inside Border <input type="checkbox" id="pedal-inside-border-check"><input type="color" id="pedal-inside-border" value="#000000"></label>
                 <br><br>
                 <label>Knobs Color <input type="color" id="knobs-color" value="#191919"></label>&ensp;&ensp;
