back things disappeared

--- a/create.html
+++ b/create.html
@@ -121,6 +121,11 @@
                     <input type="color" id="pedal-inside-border" value="#000000">
                     </label>
 
+                    <br><br>
+                    <label>Knobs Color <input type="color" id="knobs-color" value="#191919"></label>&ensp;&ensp;
+                    <label>Knobs Border <input type="color" id="knobs-border" value="#424242"></label>&ensp;&ensp;
+                    <label>Knobs Indicator <input type="color" id="knobs-indicator" value="#ffffff"></label>&ensp;&ensp;
+
                     <script>
                     $(document).ready(function () {
                         function updateInsideType() {
