--- a/create.html
+++ b/create.html
@@ -539,7 +539,7 @@ $("#add-led").on("click", addLedControl);
             $("#inside-color-label").hide();
             $("#inside-image-label").show();
             $("#pedal-inside-full-check").hide();
-            $("#pedal-inside-full-check-label").hide();
+            // $("#pedal-inside-full-check-label").hide();
         }
         });
 
