--- a/create.html
+++ b/create.html
@@ -538,7 +538,7 @@ $("#add-led").on("click", addLedControl);
         } else {
             $("#inside-color-label").hide();
             $("#inside-image-label").show();
-            $("#pedal-inside-full-check").hide();
+            // $("#pedal-inside-full-check").hide();
             // $("#pedal-inside-full-check-label").hide();
         }
         });
