--- a/create.html
+++ b/create.html
@@ -109,7 +109,7 @@
 
                     <label id="inside-image-label" style="display:none">
                     Image URL <input type="text" id="pedal-inside-image" placeholder="https://example.com/image.png">
-                    </label>&ensp;&ensp;
+                    &ensp;&ensp;</label>
 
                     <label id="pedal-inside-full-check-label">
                     <input type="checkbox" id="pedal-inside-full-check"> Full
